objects/Relationships__c.object
<CustomObject>
    <label>Relationships</label>
    <nameField>
        <displayFormat>Rel-{000000000}</displayFormat>
        <label>Relationship Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Relationships</relationshipLabel>
        <relationshipName>Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Related_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Relationships (Related To)</relationshipLabel>
        <relationshipName>Relationships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Main_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Main Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <label>Relationship Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Care Coach</fullName>
                </value>
                <value>
                    <fullName>Caregiver</fullName>
                </value>
                <value>
                    <fullName>Case Manager</fullName>
                </value>
                <value>
                    <fullName>Clinic Nurse</fullName>
                </value>
                <value>
                    <fullName>Clinic Nurse - Secondary</fullName>
                </value>
                <value>
                    <fullName>DNE</fullName>
                </value>
                <value>
                    <fullName>Daughter</fullName>
                </value>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Family Member</fullName>
                </value>
                <value>
                    <fullName>Family Physician</fullName>
                </value>
                <value>
                    <fullName>Field Case Manager</fullName>
                </value>
                <value>
                    <fullName>Field Nurse</fullName>
                </value>
                <value>
                    <fullName>Husband</fullName>
                </value>
                <value>
                    <fullName>Insurer Contact</fullName>
                </value>
                <value>
                    <fullName>Neighbour</fullName>
                </value>
                <value>
                    <fullName>ODANO</fullName>
                </value>
                <value>
                    <fullName>Office Clerk</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PCS</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Patient</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Power of Attorney</fullName>
                </value>
                <value>
                    <fullName>Prescribing Doctor</fullName>
                </value>
                <value>
                    <fullName>RNM</fullName>
                </value>
                <value>
                    <fullName>SCN</fullName>
                </value>
                <value>
                    <fullName>Social Worker</fullName>
                </value>
                <value>
                    <fullName>Son</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Wife</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>